--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div>
-        <i class="bi bi-suitcase-lg"></i>
+        <button type="button" class="btn btn-danger"><i class="bi bi-suitcase-lg"></i></button>
+        <div>
+            <strong>100+</strong>
+            <p>Total Products</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
