--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <strong>100+</strong>
             <p>Total Products</p>
         </div>
+        <div>
+            <span style="color: red;"><i class="bi bi-arrow-down"></i>15.65%</span>
+            <p>Since Last Month</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
